fixed partners max height on mobile

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -62,7 +62,7 @@ canvas {
 
 .partners {
   overflow-y: auto;
-  max-height: 200px;
+  max-height: 330px;
 }
 
 // LANDSCAPE MODE
